--- a/style.css
+++ b/style.css
@@ -22,11 +22,15 @@ h2 {
   border-style: solid;
   height: 34em;
   width: 34em;
-  background-color: darkgreen;
+  /* background-color: darkgreen; */
+  background-image: url(./assets/grass2.png);
 }
 
 .mole {
-  background-color: blueviolet;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: blueviolet; */
   height: auto;
   width: auto;
   border-style: solid;
@@ -48,4 +52,9 @@ h2 {
   background-color: crimson;
   border-radius: 10px;
   border-style: none;
+}
+
+.mole-asst {
+  height: 150px;
+  width: 150px;
 }
