--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 #the-score {
@@ -71,6 +71,7 @@ h2 {
   padding: 10px 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 15px;
   font-family: "Press Start 2P", cursive;
   color: aliceblue;
   background-color: crimson;
