--- a/style.css
+++ b/style.css
@@ -111,3 +111,15 @@ h2 {
   width: 35em;
   line-height: 25px;
 }
+
+.github-space {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 2em;
+}
+.github {
+  width: 40px;
+  margin-right: 15px;
+}
